<resources>
    <string name="app_name">Base App</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae  bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="sign_up">Registrate</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="sign_in">Ingresar</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>
    <string name="register_activity_name">Registrarse</string>
    <string name="ingreso_rapido">Acceso rápido</string>
    <string name="olvidaste_tu_pass">¿Olvidaste tu contraseña?</string>
    <string name="recuperar_pass_button">Recuperar contraseña</string>
    <string name="enter_adress_mail">Introduce la dirección de correo electrónico con la que te has registrado.</string>
    <string name="we_to_send_mail_pass">Te enviaremos un correo que te permitirá elegir otra contraseña.</string>
    <string name="are_you_new_user">¿Eres nuevo por aquí?</string>
    <string name="icon_description">Logo de la aplicaión</string>
</resources>
